--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,39 @@
 <resources>
     <style name="Base.Theme.RadioStreamPlayback" parent="Theme.Material3.DayNight.NoActionBar"/>
-    <style name="Theme.RadioStreamPlayback" parent="Base.Theme.RadioStreamPlayback" />
+
+    <style name="Theme.RadioStreamPlayback" parent="Base.Theme.RadioStreamPlayback" >
+    </style>
+
+    <style name="Text.All" parent="Theme.RadioStreamPlayback">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/anonymous_pro</item>
+    </style>
+
+    <style name="Text.Bold" parent="Text.All">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Text.Heading" parent="Text.All">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">@font/anonymous_pro</item>
+    </style>
+
+    <style name="Text.Naming" parent="Text.Bold">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Text.Description" parent="Text.All">
+        <item name="android:textColor">@color/highlighted</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Button.Regular" parent="Text.Bold">
+        <item name="android:textColor">@color/background</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@drawable/button_rectangle_background</item>
+        <item name="android:backgroundTint">@color/special</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
