--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -32,7 +32,7 @@
                 android:padding="5dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_sort"
-                android:contentDescription="@string/sort"/>
+                android:contentDescription="@string/sort_amp_filter"/>
 
         </LinearLayout>
 
