--- a/app/src/main/res/layout/playback_fragment.xml
+++ b/app/src/main/res/layout/playback_fragment.xml
@@ -74,6 +74,7 @@
         android:scaleType="fitCenter"
         android:padding="25dp"
         android:layout_marginVertical="32dp"
-        tools:src="@drawable/ic_play"/>
+        tools:src="@drawable/ic_play"
+        android:contentDescription="@string/play_pause_button"/>
 
 </LinearLayout>
